fix 11 and 12 bugs

--- a/prac11/prac.html
+++ b/prac11/prac.html
@@ -13180,15 +13180,7 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>2.</strong> На смежные стороны единичного квадрата равновероятно ставят по одной точке. Найти матожидание и дисперсию расстояния между ними.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>3.</strong>
+<p><strong>2.</strong>
 Случайная величина $\xi$ имеет экспоненциальное
     распределение с параметром $\alpha &gt; 0$.
     Найти плотности распределения случайных величин:</p>
@@ -13205,7 +13197,7 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>4.</strong> Пусть $\xi$ - случайная величина с нормальным распределением $N(a; b)$. Какое распределение будет иметь:</p>
+<p><strong>3.</strong> Пусть $\xi$ - случайная величина с нормальным распределением $N(a; b)$. Какое распределение будет иметь:</p>
 <ul>
 <li>$\xi + \alpha$ при $a = 0, b = 1, \alpha = const$</li>
 <li>$\xi * \alpha$ при $a = 0, b = 1, \alpha = const$</li>
@@ -13219,7 +13211,7 @@ $$\rho_{\xi_1 + \xi_2}(x) = \int_{-\infty}^{\infty}f_{\xi_1}(u)f_{\xi_2}(x - u)d
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>5.</strong> Случайные величины $\xi$ и $\eta$ независимы и имеют показательное распределение с параметром 1. Доказать, что отношение $\frac{\xi}{\xi + \eta}$ распределено равномерно на отрезке $[0, 1]$.</p>
+<p><strong>4.</strong> На смежные стороны единичного квадрата равновероятно ставят по одной точке. Найти матожидание расстояния между ними.</p>
 
 </div>
 </div>
@@ -13252,7 +13244,7 @@ $$\rho_\xi(x) =\left\{
     ax^{-a-1}, &amp; x\geq 1 \\
     0, &amp; x&lt;1
     \end{array}\right.$$
-Пусть $a&gt;2$. Найдите математическое ожидание, дисперсию</p>
+Пусть $a&gt;2$. Найдите математическое ожидание</p>
 
 </div>
 </div>
@@ -13271,7 +13263,7 @@ $$\rho_\xi(x) =\left\{
 <p><strong>4.</strong>
 Диаметр круга измерен приближенно. Считая, что
     его величина равномерно распределена в отрезке $[a,b]$, найти
-    распределение площади круга, ее среднее значение и дисперсию.</p>
+    распределение площади круга, ее матожидание.</p>
 
 </div>
 </div>
