--- a/prac13/prac.html
+++ b/prac13/prac.html
@@ -13103,7 +13103,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src='data/image.png' width=400/></p>
+<p><img src='data/cond.jpeg' width=300/></p>
 
 </div>
 </div>
@@ -13149,17 +13149,8 @@ $$\rho_{\xi|\eta}(x| y) = \frac{\rho_{\xi,\eta}(x, y)}{\rho_{\eta}(y)} = \frac{\
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>А на этом моменте мне заебало писать лишние буквы, поэтому записываю все в терминах статистики</p>
+<p>А на этом моменте мне надоело писать лишние буквы, поэтому записываю все в терминах статистики и машинного обучения</p>
 $$\rho(\theta|X) = \frac{\rho(X|\theta)\rho(\theta)}{\int \rho(X|\theta)\rho(\theta)d\theta}$$
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Или машинного обучения
-$$\rho(\theta|data) = \frac{\rho(data|\theta)\rho(\theta)}{\int \rho(data|\theta)\rho(\theta)d\theta}$$</p>
-
 </div>
 </div>
 </div>
@@ -13173,7 +13164,18 @@ $$\rho(\theta|data) = \frac{\rho(data|\theta)\rho(\theta)}{\int \rho(data|\theta
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>1.</strong> Пусть $\mu \sim U[0,1]$, а $X \sim \mathcal{N}(\mu, 1)$. Ну и докажите хуйню какую-нибудь</p>
+<p><strong>1.</strong>
+Совместное распределение случайных величин $\xi$ и $\eta$ имеет плотность
+$$\rho_{\xi,\eta}(x,y) =\left\{
+    \begin{array}{cc}
+    \frac{1 + 9x^2y^2}{8}, &amp; 0\leq x, y\leq 1 \\
+    0, &amp; otherwise
+    \end{array}\right.$$</p>
+<p>Найдите</p>
+<ul>
+<li>$\rho_{\xi}$, $\rho_{\eta}$</li>
+<li>$\rho_{\xi|\eta}$, $\rho_{\eta|\xi}$</li>
+</ul>
 
 </div>
 </div>
@@ -13181,7 +13183,25 @@ $$\rho(\theta|data) = \frac{\rho(data|\theta)\rho(\theta)}{\int \rho(data|\theta
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>5.</strong> Случайные величины $\xi$ и $\eta$ независимы и имеют показательное распределение с параметром 1. Доказать, что отношение $\frac{\xi}{\xi + \eta}$ распределено равномерно на отрезке $[0, 1]$.</p>
+<p><strong>2.</strong> Случайные величины $\xi$ и $\eta$ независимы и имеют показательное распределение с параметром 1 ($Exp(1)$). Доказать, что отношение $\frac{\xi}{\xi + \eta}$ распределено равномерно на отрезке $[0, 1]$.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>3.</strong> Пусть $\theta \sim U[a_1, a_2]$ ($a_1, a_2 &gt; 0$), а $X \sim Exp(\theta)$. Это значит мы знаем $\rho_{alpha}$ и $\rho_{X|\theta}$
+Найдите априорное распределение $X$ $\rho_{X}$ и апостериорное $\rho_{\theta|X}$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>4.</strong> Димас напился и купил 10 одинаковых жигулей с сломанным табло бензобака. Ему стало интересно, а какой объем бензобака у этих жиг. Интернету он не доверяет, поэтому решил поставить эксперимент. Он вылил бензин из каждой жиги и получил 10 чисел (25, 9, 12, 15, 3, 30, 17, 18, 24, 22). Он прикинул, что объем где-то от 30 до 40 литров, а в каждой из жиг также осталось какое-то кол-во бензина от старых хозяев от 0 до полного объема бензобака. Помогите Димасу оценить объем бензобака.</p>
+<p>Найдите апостериорное распределение на объем бензобака исходя их того, что объем бензобака и остатки распределены равномерно.</p>
 
 </div>
 </div>
@@ -13190,6 +13210,52 @@ $$\rho(\theta|data) = \frac{\rho(data|\theta)\rho(\theta)}{\int \rho(data|\theta
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#1044;&#1047;-">&#1044;&#1047; <a class="anchor" id="chapter3" /><a class="anchor-link" href="#&#1044;&#1047;-">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>1.</strong> Совместное распределение случайных величин $\xi$ и $\eta$ имеет плотность
+$$\rho_{\xi,\eta}(x,y) =\left\{
+    \begin{array}{cc}
+    \frac{3}{2}(x^2+y^2), &amp; 0\leq x\leq 1, 0\leq y\leq 1 \\
+    0, &amp; otherwise
+    \end{array}\right.$$
+Найдите  $\rho_{\xi|\eta}$, $\rho_{\eta|\xi}$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>2.</strong> (2)Пусть $a \sim U[0, 1]$, $b \sim U[0, a]$, а $X \sim U[0, b]$. Это значит мы знаем $\rho_{a}$,  $\rho_{b|a}$, $\rho_{X|b}$.
+Найдите</p>
+<ul>
+<li>(1) априорные распределения $\rho_{b}$, $\rho_{X}$</li>
+<li>(1) апостериорные $\rho_{b|X}$, $\rho_{a|X}$ </li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>3.</strong> Пусть у нас есть выборка из $X_1,\ldots, X_n \sim U[0,\theta]$ ( плотность $X_i$ равна $\rho(X|\theta)$). <strong>Сопряженным</strong> распределением $p(\theta)$ к $p(X|\theta)$ называется такое распределение, что $p(\theta|X)$ лежит в том же семействе, что и $p(\theta)$ (например $p(\theta)$ и $p(\theta|X)$ - оба нормальные, но с разными параметрами)</p>
+<p>Докажите, что распределение Парето $\rho(\theta) = \frac{ka^k}{x^{k+1}}$ ($a,k$ - просто константы), является <strong>сопряженным</strong> к $p(X|\theta)$.</p>
+<p>Вам нужно найти $\rho(\theta|X)$ и показать, что оно тоже распределено по Парето.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>4.</strong> 6 друзей решили собраться встретиться в баре. Но Настя забыла во сколько все решили собраться. Помнит только что с 0 до 1. Чтобы не спалиться, что она все забыла, она пришла самой первой в 0 и смотрела во сколько все приходят. Получила результат (0.8, 1.3, 1.2, 1.5, 1). При этом она знает, что каждый ее друг мог равновероятно опоздать на час.</p>
+<p>Помогите Насте восстановить изначальное время встречи, а лучше распределение даты встречи исходя из полученных ей данных.</p>
+
 </div>
 </div>
 </div>
