--- a/prac14/prac.html
+++ b/prac14/prac.html
@@ -13131,7 +13131,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-$$E(\xi|\eta)(y) = \sum xP(\xi=x|\eta=y)dx$$$$E(\xi|\eta)(y) = \int_{-\infty}^{\infty}x\rho_{\xi|\eta}(x|y)dx$$
+<p>Матожидание строится аналогично стандартному, <strong>но</strong> условное матожидание - это <strong>функция</strong> от условния.</p>
+$$\mathbb{E}(\xi|\eta)(y) = \sum xP(\xi=x|\eta=y)dx$$$$\mathbb{E}(\xi|\eta)(y) = \int_{-\infty}^{\infty}x\rho_{\xi|\eta}(x|y)dx$$<p>Для разбиения $H = (H_1, H_2, H_3)$</p>
+$$\mathbb{E}(\xi|H) = \left\{
+    \begin{array}{ccc}
+    \mathbb{E}(\xi|H_1), H=H_1 \\
+    \mathbb{E}(\xi|H_2), H=H_2 \\
+    \mathbb{E}(\xi|H_3), H=H_3 \\
+    \end{array} \right.$$
 </div>
 </div>
 </div>
