--- a/prac14/prac.html
+++ b/prac14/prac.html
@@ -13171,21 +13171,21 @@ $$\mathbb{E}(\xi|H) = \left\{
 <p><strong>3.</strong> Двумерное распределение пары целочисленных случайных величин $\xi$ и $\eta$ задаётся с помощью таблицы,</p>
 <table>
 <thead><tr>
-<th>$\xi$, $\eta$</th>
-<th>$\xi$ = $-1$</th>
-<th>$\xi$ = $0$</th>
-<th>$\xi$ = $1$</th>
+<th>$\xi, \eta$</th>
+<th>$\xi = -1$</th>
+<th>$\xi = 0$</th>
+<th>$\xi = 1$</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>$\eta$ = $-1$</td>
+<td>$\eta = -1$</td>
 <td>$\frac{1}{8}$</td>
 <td>$\frac{1}{12}$</td>
 <td>$\frac{7}{24}$</td>
 </tr>
 <tr>
-<td>$\eta$ = $1$</td>
+<td>$\eta = 1$</td>
 <td>$\frac{5}{24}$</td>
 <td>$\frac{1}{6}$</td>
 <td>$\frac{1}{8}$</td>
