fix formula for complex density

--- a/prac11/prac.html
+++ b/prac11/prac.html
@@ -13149,7 +13149,7 @@ $$\mathbb{D}[\xi] =\mathbb{E}[\xi^2] - \mathbb{E}[\xi]^2$$
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Пусть $\eta = g(\xi)$, где $g$- монотонная функция, тогда плотность $\eta$ можно вырадить как</p>
-$$\rho_{\eta}(x) = \frac{\rho_{\xi}(g^{-1}(x))}{g'(g^{-1}(x))}$$
+$$\rho_{\eta}(x) = \frac{\rho_{\xi}(g^{-1}(x))}{|g'(g^{-1}(x))|}$$
 </div>
 </div>
 </div>
