--- a/prac13/prac.html
+++ b/prac13/prac.html
@@ -13264,6 +13264,17 @@ $$\rho_{\xi,\eta}(x,y) =\left\{
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>5.</strong> Пусть $X$ и $Y$ независимы и нормально распределены с параметрами $(m_1, d_1)$ и $(m_2, d_2)$.</p>
+<ul>
+<li>Найдите условное распределение $X + Y$ при условии $X = c$ ($c$ - некоторая константа)</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#1043;&#1088;&#1086;&#1073;&#1099;-">&#1043;&#1088;&#1086;&#1073;&#1099; <a class="anchor" id="chapter4" /><a class="anchor-link" href="#&#1043;&#1088;&#1086;&#1073;&#1099;-">&#182;</a></h2>
 </div>
 </div>
@@ -13282,7 +13293,6 @@ $$\rho_{\xi,\eta}(x,y) =\left\{
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>2.</strong> Пусть $X$ и $Y$ независимы и нормально распределены с параметрами $(m_1, d_1)$ и $(m_2, d_2)$.</p>
 <ul>
-<li>Найдите условное распределение $X + Y$ при условии $X = a$</li>
 <li>условное распределение $X$ при условии $X+Y=b$</li>
 </ul>
 
